# kaizen-studio

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt
apps/web/: .dockerignore  .env.example  .env.production  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-results.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
deploy/backup/: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  backup-cronjob.yaml  backup-pvc.yaml  backup.sh  check-backup-health.sh  restore.sh  verify-backup.sh
deploy/k8s/: .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  INDEX.md  QUICK_START.md  README.md
deploy/loadtest/: .github-workflows-example.yml  .gitignore  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  k8s-loadtest-job.yaml  run-loadtest.sh
docs/: README.md  dataflow-bug-report.md  dataflow-logging-recommendations.md  kailash-sdk-logging-recommendations.md
docs/00-overview/: 00-management-vs-data-plane.md  01-fastapi-backend.md  02-fastapi-vs-nexus.md  03-implementation-status.md
docs/01-foundation/: 00-project-setup.md  01-dataflow-models.md  02-authentication.md
docs/02-user-management/: 00-organization-model.md  01-user-roles.md  02-teams-invitations.md
docs/03-sso-integration/: 00-overview.md  01-provider-setup.md
docs/04-rbac/: 00-overview.md
docs/05-agents/: 00-agent-model.md  01-contexts-tools.md  02-versioning.md
docs/06-gateways/: 00-gateway-model.md  01-deployment-lifecycle.md  external-agents-accessibility.md  external-agents-ui.md  external-agents-user-guide.md  lineage-visualization.md
docs/07-external-integrations/: 01-overview.md  02-user-guide.md  03-admin-guide.md  04-api-reference.md  05-developer-guide.md  06-migration.md  07-release-notes.md  08-approval-workflows.md
docs/08-orchestration/: 00-pipelines.md  01-graph-operations.md  02-test-panel.md
docs/09-governance/: 00-audit-logging.md
docs/10-observability/: 00-metrics.md
docs/11-api-keys/: 00-api-key-management.md  01-rate-limiting.md
docs/12-integrations/: 00-webhooks.md
docs/13-billing/: 00-usage-tracking.md  01-billing-periods.md
docs/14-connectors/: 00-connector-management.md
docs/15-abac/: 00-policy-based-access.md
docs/16-multi-tenant/: 00-overview.md  01-sso-domain-grouping.md  02-multi-organization.md  03-frontend-integration.md
docs/17-promotions/: 00-environment-promotion.md
docs/18-scaling/: 00-auto-scaling.md
docs/19-infrastructure/: 01-known-issues.md  02-local-development.md  auth-lineage.md  external-agents-governance.md  (+3 more)
scripts/: create_ai_hub_pipelines.py  create_tables_sql.py  ensure_tables.py  entrypoint.sh  init_test_db.py  seed_test_users.py  update_ai_hub_agents.py
tests/: ABAC_TESTING_SUMMARY.md  ABAC_TESTS_INDEX.md  ABAC_TESTS_QUICK_REFERENCE.md  API_KEY_TESTING_SUMMARY.md  API_KEY_TESTS_QUICK_REFERENCE.md  METRICS_TESTS_INDEX.md  METRICS_TEST_SUMMARY.md  PHASE6_TESTING_DOCUMENTATION.md  PIPELINE_TEST_SUMMARY.md  PROMOTION_TESTS_INDEX.md  PROMOTION_TESTS_SUMMARY.md  QUICK_START_PHASE6_TESTS.md  RBAC_TESTING_GUIDE.md  RBAC_TEST_SUMMARY.md  README_API_KEY_TESTS.md  README_RBAC_TESTS.md  SSO_QUICK_REFERENCE.md  SSO_TEST_SUMMARY.md  __init__.py  conftest.py  debug_sso_flow.py
todos/: 000-master.md
(+1445 files in other folders)
